# NIVAI

./: .env  .env.example  .github  .gitignore  DEVELOPER_GUIDELINES.md  README.md  SETUP_PRECOMMIT.md  docker-compose.yml  platform_review.md  technical_specification.md
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/pkg/config/: config.go
backend/pkg/controllers/: analytics_controller.go  analytics_controller_test.go  auth_controller.go  auth_controller_test.go  health_controller.go  health_controller_test.go  match_controller.go  match_controller_test.go  player_controller.go  player_controller_test.go  video_controller.go  video_controller_test.go  websocket_controller.go  websocket_controller_test.go
backend/pkg/middleware/: middleware.go  middleware_test.go
backend/pkg/models/: video.go
backend/pkg/routes/: routes.go
backend/pkg/services/: file_storage_service.go  file_storage_service_test.go  storage_factory.go  (+5 more)
frontend/: package-lock.json  package.json
infrastructure/docker/: backend.Dockerfile  frontend.Dockerfile
infrastructure/kubernetes/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  storage-secrets.yaml
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
python_api/: API_DOCUMENTATION.md  Dockerfile  pyproject.toml
python_api/src/: data_loader.py  stats_calculator.py
python_api/src/api/: main.py  models.py
python_api/tests/: test_data_loader.py  test_main.py
scripts/: backend-pre-commit.sh  install-vm-portable-python.sh  setup-dev-env.sh
(+28 files in other folders)
