[tool.poetry]
name = "football-analysis-api"
version = "0.1.0"
description = "API for Football Analysis"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "api", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pyarrow = "^14.0.1" # Added for Parquet support
pandas = "^2.1.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
